Prevent tech tags from overlapping with area badge on desktop
- Add padding-right: 140px to .project-tags container on desktop
- Creates reserved space for absolutely positioned area badge
- Tech tags now wrap before reaching badge area

--- a/css/main.css
+++ b/css/main.css
@@ -1270,6 +1270,10 @@ main {
 		font-size: 0.7rem;
 	}
 
+	.project-tags {
+		padding-right: 140px;
+	}
+
 	.project-area-badge {
 		position: absolute;
 		bottom: 1rem;
